# matcha

./: .gitignore  CMakeLists.txt
include/: matcha
include/bits_of_matcha/: model.h
include/bits_of_matcha/estimator/: ensemble.h  estimator.h  neuralnetwork.h
include/bits_of_matcha/nn/layer/: layer.h  linear.h
src/: main.cpp
src/bits_of_matcha/: model.cpp
src/bits_of_matcha/estimator/: ensemble.cpp  neuralnetwork.cpp
src/bits_of_matcha/nn/layer/: linear.cpp
